2005-02-25  Richard Hult  <richard@imendio.com>

	* data/stylesheets/html1_css.xsl:
	* data/stylesheets/html1_gantt.xsl:
	* data/stylesheets/html1_resources.xsl:
	* data/stylesheets/html1_tasks.xsl: Clean up, indent, tweak the
	style to make it look less cluttered. Also apply patch from David
	Sundstrom <public@peapod.net> to add a percent complete column to
	the task list.

2005-02-24  Richard Hult  <richard@imendio.com>

	* Release 0.12.93.

2005-02-24  Richard Hult  <richard@imendio.com>

	* data/stylesheets/html1_tasks.xsl: Use work-start instead of
	start here too.

	* src/planner-view-loader.c (mvl_load): Don't load lazily.
	* src/planner-plugin-loader.c (mpl_load): Likewise.

	* src/Makefile.am: Move the gantt background files to the shared
	gantt/task lib.

	* libplanner/mrp-calendar.c (calendar_finalize): Fix leaks.

	* configure.in: Bump.

	* libplanner/mrp-task-manager.c (task_manager_do_backward_pass):
	Add comment about a bug.

	* src/planner-task-dialog.c (task_dialog_update_schedule_label):
	Fix compiler warning.

2005-02-20  Richard Hult  <richard@imendio.com>

	* src/planner-print-dialog.c (planner_print_dialog_save_config):
	Fix bug #167899.

	* src/planner-project-properties.c: (mpp_set_start),
	(mpp_start_set_from_widget): Try to fix bug #156615.

2005-02-20  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-row.c: (recalc_bounds),
	(ttable_row_ensure_layout), (ttable_row_update_resources),
	(ttable_row_draw_assignment), (ttable_row_point),
	(ttable_row_geometry_changed): Patch from caladd@particlestorm.net
	to fix bug #138549.

2005-02-20  Richard Hult  <richard@imendio.com>

	* src/planner-task-dialog.c: (task_dialog_pred_cell_edited),
	(task_dialog_cell_type_hide_popup),
	(task_dialog_setup_predecessor_list): Don't make the name editable
	in the predecessor list. It's not very logical that editing the
	name of a predecessor changes which predecessor is used. Also
	fixes bug #139671.

2005-02-20  Richard Hult  <richard@imendio.com>
