@@ -1,5 +1,8 @@
 2005-02-25  Richard Hult  <richard@imendio.com>
 
+	* src/planner-html-plugin.c (html_plugin_ok_button_clicked):
+	(show_url): Hack to display the result in the browser if asked to.
+
 	* data/stylesheets/html1_css.xsl:
 	* data/stylesheets/html1_gantt.xsl:
 	* data/stylesheets/html1_resources.xsl:
